# impartial

./: README.md  pyproject.toml  test_impartial.py
.github/workflows/: build.yml
