[tool.poetry]
name = "impartial"
version = "0.1.0"
description = "A lightweight extension of functools.partial."
authors = ["Georg Wölflein <georgw7777@gmail.com>"]
license = "Apache-2.0"
packages = [
    { include = "impartial.py" }
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
